bugfix z-index of navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,7 +47,7 @@ mat-toolbar {
 .mat-drawer-opened {
     // need to give the z-index a value to make fullscreen-images work
     // otherwise navbar will always be on top
-    z-index: 1 !important;
+    z-index: 20 !important;
 }
 
 mat-sidenav {
